--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.target>8</maven.compiler.target>
     <common.io.version>2.11.0</common.io.version>
     <common.collection.version>4.4</common.collection.version>
+    <junit.version>5.7.0</junit.version>
   </properties>
 
   <dependencies>
@@ -45,6 +46,23 @@
       <artifactId>commons-collections4</artifactId>
       <version>${common.collection.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
-
 </project>
